# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.189 2005/03/09 19:42:36 wolf31o2 Exp $

  09 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  Calling this one 1.1.7 and rolling a tarball.

  08 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/alpha-archscript.sh, livecd/runscript/hppa-archscript.sh,
  livecd/runscript/ppc-archscript.sh, livecd/runscript/sparc-archscript.sh,
  -livecd/runscript/sparc64-archscript.sh,
  livecd/runscript/x86-archscript.sh, modules/livecd_stage2_target.py:
  Added livecd/volid to set the volume ID when creating the ISO, patch by
  Gustavo Zacarias <gustavoz@gentoo.org>. Also copied sparc64-archscript.sh to
  sparc-archscript.sh and removing sparc64 one, as they are identical now.

  08 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +livecd/cdtar/isolinux-2.13-cdtar.tar.bz2,
  +livecd/cdtar/isolinux-2.13-memtest86+-cdtar.tar.bz2:
  Adding experimental isolinux cdtar for isolinux 2.13 and memtest86+ 1.51.

  08 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  Removed hdparm from default runlevel as it break ide=nodma at boot.

  07 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/pre-kmerge.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh:
  Revert last set of changes and remove portage version check from emerge in
  livecd-stage1, as it breaks catalyst's ability to fail properly on an
  incomplete emerge.

  07 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/pre-kmerge.sh:
  Change genkernel check to use best_version and has_version to determine if
  the any previously installed versions of genkernel are up to date. Change
  emerge line for kernels to use -n option to only install if they were not