@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript/Attic/ppc-archscript.sh,v 1.7 2005/03/09 00:22:05 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript/Attic/ppc-archscript.sh,v 1.8 2005/03/09 20:03:12 wolf31o2 Exp $
 
 case $1 in
 	kernel)
@@ -57,7 +57,7 @@ case $1 in
 	;;
 
 	iso)
-		# The name of the iso should be retrieved from the specs. For now, asssume GentooPPC_2004.0
-		mkisofs -J -r -netatalk -hfs -probe -map boot/map.hfs -part -no-desktop -hfs-volid GentooPPC_2004.0 -hfs-bless ./boot -V "${iso_volume_id}" -o ${2} ${clst_cdroot_path}
+		# The name of the iso should be retrieved from the specs.
+		mkisofs -J -r -netatalk -hfs -probe -map boot/map.hfs -part -no-desktop -hfs-volid "${iso_volume_id}" -hfs-bless ./boot -V "${iso_volume_id}" -o ${2} ${clst_cdroot_path}
 	;;
 esac
